# relperm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pr-validation.yaml  quality.yaml  release.yaml
docs/: api.md  getting-started.md  index.md
src/: relperm.py
src/relperm/: __init__.py  relperm.py
tests/: test_relperm.py
